feat: adicionado novas view, metodo de busca balancete por empresa e periodo, adicionado classes que irao salvar dados de usuario